--- a/福岡熊本v2.html
+++ b/福岡熊本v2.html
@@ -488,25 +488,25 @@
         
         // **地圖連結數據 (已確認)**
         const MAP_LINKS = { 
-            "Ritz Carlton Fukuoka": "https://maps.google.com/?cid=4019100722797758021&g_mp=Cidnb29nbGUubWFwcy5wbGFjZXMudjEuUGxhY2VzLlNlYXJjaFRleHQ", // 實際搜尋結果
-            "福岡塔": "https://maps.app.goo.gl/FukuokakaTower",
-            "大濠公園": "https://maps.app.goo.gl/OhoriPark",
-            "Nagasaki Marriott Hotel": "https://maps.app.goo.gl/NagasakiMarriott",
-            "長崎中華街": "https://maps.app.goo.gl/NagasakiChinatown",
-            "和平公園 / 原爆資料館": "https://maps.app.goo.gl/PeacePark",
-            "稻佐山夜景": "https://maps.app.goo.gl/MtInasa",
-            "大浦天主堂": "https://maps.app.goo.gl/OuraChurch",
-            "哥拉巴園": "https://maps.app.goo.gl/GloverGarden",
-            "出島": "https://maps.app.goo.gl/Dejima",
-            "眼鏡橋": "https://maps.app.goo.gl/Meganebashi",
-            "KOKO Hotel Premier Kumamoto": "https://maps.app.goo.gl/KOKOHotelKumamoto",
-            "熊本城": "https://maps.app.goo.gl/KumamotoCastle",
-            "城彩苑": "https://maps.app.goo.gl/Josaien",
-            "上通/下通商店街": "https://maps.app.goo.gl/KamitoriShopping",
-            "水前寺成趣園": "https://maps.app.goo.gl/Suizenji",
-            "黑川溫泉": "https://maps.app.goo.gl/KurokawaOnsen",
-            "植木溫泉": "https://maps.app.goo.gl/UekiOnsen",
-            "熊本機場 (KMJ)": "https://maps.app.goo.gl/KumamotoAirport",
+    "Ritz Carlton Fukuoka": "https://www.google.com/maps/search/?api=1&query=The+Ritz-Carlton+Fukuoka",
+    "福岡塔": "https://www.google.com/maps/search/?api=1&query=福岡タワー",
+    "大濠公園": "https://www.google.com/maps/search/?api=1&query=Ohori+Park",
+    "Nagasaki Marriott Hotel": "https://www.google.com/maps/search/?api=1&query=Nagasaki+Marriott+Hotel",
+    "長崎中華街": "https://www.google.com/maps/search/?api=1&query=長崎新地中華街",
+    "和平公園 / 原爆資料館": "https://www.google.com/maps/search/?api=1&query=長崎平和公園+原爆資料館",
+    "稻佐山夜景": "https://www.google.com/maps/search/?api=1&query=長崎+稲佐山",
+    "大浦天主堂": "https://www.google.com/maps/search/?api=1&query=Oura+Church",
+    "哥拉巴園": "https://www.google.com/maps/search/?api=1&query=Glover+Garden",
+    "出島": "https://www.google.com/maps/search/?api=1&query=Dejima+Nagasaki",
+    "眼鏡橋": "https://www.google.com/maps/search/?api=1&query=眼鏡橋",
+    "KOKO Hotel Premier Kumamoto": "https://www.google.com/maps/search/?api=1&query=KOKO+HOTEL+Premier+Kumamoto",
+    "熊本城": "https://www.google.com/maps/search/?api=1&query=Kumamoto+Castle",
+    "城彩苑": "https://www.google.com/maps/search/?api=1&query=桜の馬場+城彩苑",
+    "上通/下通商店街": "https://www.google.com/maps/search/?api=1&query=上通+下通+商店街+熊本",
+    "水前寺成趣園": "https://www.google.com/maps/search/?api=1&query=Suizenji+Jojuen+Garden",
+    "黑川溫泉": "https://www.google.com/maps/search/?api=1&query=Kurokawa+Onsen",
+    "植木溫泉": "https://www.google.com/maps/search/?api=1&query=Ueki+Onsen",
+    "熊本機場 (KMJ)": "https://www.google.com/maps/search/?api=1&query=Kumamoto+Airport+KMJ",
         };
         
         // **行程數據**
