--- a/福岡熊本v3.html
+++ b/福岡熊本v3.html
@@ -1,217 +1,154 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>福岡熊本行程規劃（雲端同步）</title>
-<style>
-
-    body {
-
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
-
-      margin: 20px;
-
-    }
-
-    input, button {
-
-      padding: 6px;
-
-      margin: 4px 0;
-
-    }
-
-    .item {
-
-      border-bottom: 1px solid #ddd;
-
-      padding: 6px 0;
-
-    }
-</style>
-<!-- 🔥 Firebase SDK（一定要 type="module"） -->
-<script type="module">
-
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-
-    import { getFirestore, doc, getDoc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-
-    // ✅ 你的 Firebase 設定
-
-    const firebaseConfig = {
-
-      apiKey: "AIzaSyBRjYjvwvCNTRHdI8vH8n3GPabzSnSDbvI",
-
-      authDomain: "jp-b0e03.firebaseapp.com",
-
-      projectId: "jp-b0e03",
-
-      storageBucket: "jp-b0e03.firebasestorage.app",
-
-      messagingSenderId: "689610031212",
-
-      appId: "1:689610031212:web:f63f2efe61d4ad562bd849"
-
-    };
-
-    const app = initializeApp(firebaseConfig);
-
-    const db = getFirestore(app);
-
-    // 🌍 給下面一般 JS 使用
-
-    window.db = db;
-
-    window.fbDoc = doc;
-
-    window.fbGetDoc = getDoc;
-
-    window.fbSetDoc = setDoc;
-
-    window.fbOnSnapshot = onSnapshot;
-</script>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>北九州旅行助手 v3 FINAL</title>
+<script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-<h2>🇯🇵 福岡 / 熊本 行程規劃（雲端同步）</h2>
-<input id="dateInput" placeholder="日期（例：Day 1）">
-<input id="textInput" placeholder="行程內容">
-<button onclick="addItem()">新增</button>
-<div id="list"></div>
-<script>
-
-    /* ===============================
-
-       🔹 資料區
-
-    =============================== */
-
-    let ITINERARY_DATA = {};
-
-    const DOC_REF = fbDoc(db, "travelPlanner", "fukuoka_kumamoto");
-
-    /* ===============================
-
-       🔹 Firebase 讀取
-
-    =============================== */
-
-    async function loadFromFirebase() {
-
-      const snap = await fbGetDoc(DOC_REF);
-
-      if (snap.exists()) {
-
-        ITINERARY_DATA = snap.data().itinerary || {};
-
-      }
-
-      render();
-
-    }
-
-    /* ===============================
-
-       🔹 Firebase 儲存
-
-    =============================== */
-
-    async function saveToFirebase() {
-
-      await fbSetDoc(DOC_REF, {
-
-        itinerary: ITINERARY_DATA
-
-      });
-
-    }
-
-    /* ===============================
-
-       🔹 即時同步（跨裝置）
-
-    =============================== */
-
-    fbOnSnapshot(DOC_REF, (snap) => {
-
-      if (snap.exists()) {
-
-        ITINERARY_DATA = snap.data().itinerary || {};
-
-        render();
-
-      }
-
-    });
-
-    /* ===============================
-
-       🔹 新增行程
-
-    =============================== */
-
-    function addItem() {
-
-      const date = document.getElementById("dateInput").value;
-
-      const text = document.getElementById("textInput").value;
-
-      if (!date || !text) return;
-
-      if (!ITINERARY_DATA[date]) {
-
-        ITINERARY_DATA[date] = [];
-
-      }
-
-      ITINERARY_DATA[date].push(text);
-
-      document.getElementById("textInput").value = "";
-
-      saveToFirebase();
-
-      render();
-
-    }
-
-    /* ===============================
-
-       🔹 顯示畫面
-
-    =============================== */
-
-    function render() {
-
-      const list = document.getElementById("list");
-
-      list.innerHTML = "";
-
-      for (const date in ITINERARY_DATA) {
-
-        const h3 = document.createElement("h3");
-
-        h3.textContent = date;
-
-        list.appendChild(h3);
-
-        ITINERARY_DATA[date].forEach(item => {
-
-          const div = document.createElement("div");
-
-          div.className = "item";
-
-          div.textContent = "• " + item;
-
-          list.appendChild(div);
-
-        });
-
-      }
-
-    }
-
-    window.addEventListener("load", loadFromFirebase);
+<body class="bg-gray-100">
+<!-- 🔐 登入畫面 -->
+<div id="loginScreen" class="h-screen flex items-center justify-center">
+<button onclick="login()" class="bg-blue-600 text-white px-6 py-3 rounded-xl text-lg">
+   使用 Google 登入
+</button>
+</div>
+<!-- 🚫 權限拒絕 -->
+<div id="denied" class="hidden h-screen flex items-center justify-center text-red-600 text-xl">
+ ❌ 此帳號沒有存取權限
+</div>
+<!-- 📱 主畫面 -->
+<div id="app" class="hidden max-w-md mx-auto p-4 space-y-4">
+<header class="text-center">
+<h1 class="text-2xl font-bold">Josh & Candice 九州旅行</h1>
+<p id="userInfo" class="text-sm text-gray-500"></p>
+<p id="editingStatus" class="text-sm text-green-600"></p>
+</header>
+<!-- 🗓 行程 -->
+<button onclick="addItinerary()" class="w-full bg-green-500 text-white p-3 rounded-lg">
+➕ 新增行程
+</button>
+<div id="itineraryList" class="space-y-2"></div>
+<!-- 💸 記帳 -->
+<div class="bg-white p-3 rounded-lg shadow">
+<h2 class="font-bold mb-2">💸 記帳</h2>
+<input id="expenseAmount" type="number" placeholder="金額" class="border p-1 w-full mb-1">
+<select id="expensePayer" class="border p-1 w-full mb-1">
+<option>Josh</option>
+<option>Candice</option>
+</select>
+<button onclick="addExpense()" class="bg-blue-500 text-white px-3 py-1 rounded w-full">
+   新增記帳
+</button>
+<div id="expenseList" class="mt-2 space-y-1"></div>
+</div>
+</div>
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
+import {
+ getAuth,
+ GoogleAuthProvider,
+ signInWithPopup,
+ onAuthStateChanged
+} from "https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js";
+import {
+ getFirestore,
+ doc,
+ setDoc,
+ onSnapshot,
+ serverTimestamp,
+ enableIndexedDbPersistence
+} from "https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore.js";
+/* 🔧 Firebase */
+const firebaseConfig = {
+ apiKey: "AIzaSyBRjYjvwvCNTRHdI8vH8n3GPabzSnSDbvI",
+ authDomain: "jp-b0e03.firebaseapp.com",
+ projectId: "jp-b0e03",
+ storageBucket: "jp-b0e03.firebasestorage.app",
+ messagingSenderId: "689610031212",
+ appId: "1:689610031212:web:f63f2efe61d4ad562bd849"
+};
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+enableIndexedDbPersistence(db).catch(()=>{});
+/* 🔐 允許名單 */
+const ALLOWED_EMAILS = [
+ "idispeter@gmail.com",
+ "babys115@gmail.com"
+];
+const tripRef = doc(db, "tripData", "jp-trip-2024");
+let user = null;
+let data = { itinerary: [], expenses: [], editingBy: null };
+/* 🔐 Login */
+window.login = async () => {
+ await signInWithPopup(auth, new GoogleAuthProvider());
+};
+onAuthStateChanged(auth, u => {
+ if (!u) return;
+ if (!ALLOWED_EMAILS.includes(u.email)) {
+   document.getElementById("loginScreen").classList.add("hidden");
+   document.getElementById("denied").classList.remove("hidden");
+   return;
+ }
+ user = u;
+ document.getElementById("loginScreen").classList.add("hidden");
+ document.getElementById("app").classList.remove("hidden");
+ document.getElementById("userInfo").textContent = `登入中：${u.displayName}`;
+ listen();
+});
+/* 🔄 即時同步 */
+function listen() {
+ onSnapshot(tripRef, snap => {
+   if (!snap.exists()) {
+     setDoc(tripRef, data);
+     return;
+   }
+   data = snap.data();
+   render();
+ });
+}
+/* 🟢 編輯狀態 */
+function markEditing() {
+ setDoc(tripRef, {
+   editingBy: user.displayName,
+   editingAt: Date.now()
+ }, { merge: true });
+}
+/* 🗓 行程 */
+window.addItinerary = async () => {
+ markEditing();
+ data.itinerary.unshift({
+   title: "新行程",
+   by: user.displayName,
+   at: new Date().toLocaleString()
+ });
+ await setDoc(tripRef, data);
+};
+/* 💸 記帳 */
+window.addExpense = async () => {
+ markEditing();
+ data.expenses.unshift({
+   amount: document.getElementById("expenseAmount").value,
+   payer: document.getElementById("expensePayer").value,
+   by: user.displayName,
+   at: new Date().toLocaleString()
+ });
+ await setDoc(tripRef, data);
+};
+/* 🖼 Render */
+function render() {
+ document.getElementById("editingStatus").textContent =
+   data.editingBy ? `🟢 ${data.editingBy} 正在編輯` : "";
+ document.getElementById("itineraryList").innerHTML =
+   data.itinerary.map(i =>
+     `<div class="bg-white p-2 rounded">${i.title} – ✍️ ${i.by}</div>`
+   ).join("");
+ document.getElementById("expenseList").innerHTML =
+   data.expenses.map(e =>
+     `<div>${e.amount} 元 / ${e.payer}（${e.by}）</div>`
+   ).join("");
+}
 </script>
 </body>
 </html>
- 
