--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         /* ===================================================
           記帳 (EXPENSE) 相關函式
         =================================================== */
-
+let EXPENSE_DATA = [];
 
         // 選擇幣別
         window.selectCurrency = function(currency) {
