--- a/index.html
+++ b/index.html
@@ -341,7 +341,11 @@
         /* ===================================================
           記帳 (EXPENSE) 相關函式
         =================================================== */
-let EXPENSE_DATA = [];
+/* ===================================================
+  記帳 (EXPENSE) 相關函式
+=================================================== */
+// 放在您的程式碼頂部
+let EXPENSE_DATA = []; // ⭐️ 這裡是重複定義，會覆蓋掉 Firebase 賦值的 EXPENSES_DATA
 
         // 選擇幣別
         window.selectCurrency = function(currency) {
