--- a/index.html
+++ b/index.html
@@ -94,27 +94,31 @@
       /* 1. 基礎樣式：圓圓的框 + 閒置時灰色框 */
 .block-select-btn {
     /* 使用 rounded-full 達成膠囊狀圓角 */
-    @apply px-4 py-1 border-2 rounded-2xl text-sm font-bold transition-all duration-200 mr-2 mb-2 bg-white;
+    @apply px-4 py-1 border-2 rounded-full text-sm font-bold transition-all duration-200 mr-2 mb-2 bg-white;
     
     /* 閒置時的顏色設定 */
-    border-color: #D1D5DB; /* 較明顯的灰色邊框 */
-    color: #6B7280;        /* 灰色文字 */
+    border-color: #D1D5DB !important; /* 淺灰色框 */
+    color: #6B7280;                   /* 灰色文字 */
     white-space: nowrap;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* 2. 閒置時滑鼠懸停效果 (微粉紅提示) */
-.block-select-btn:not(.active-currency):not(.active-payer):not(.active-category):not(.active-payment):not(.active-filter):hover {
+.block-select-btn:hover:not([class*="active-"]) {
     border-color: #FF748D;
-    @apply bg-pink-50 text-pink-500;
+    background-color: #FFF1F2; /* 淡淡的粉紅底 */
+    color: #FF748D;
 }
 
 /* 3. 選取狀態：粉紅色填滿 + 粉紅色外框 */
 .active-currency, .active-payer, .active-category, .active-payment, .active-filter {
     background-color: #FF748D !important; /* 粉紅填滿 */
     border-color: #FF748D !important;     /* 粉紅外框 */
-    color: white !important;              /* 選中時文字變白色 */
+    color: white !important;              /* 文字轉白 */
     @apply shadow-md;
-    transform: scale(1.05);               /* 選中時稍微放大增加質感 */
+    transform: scale(1.05);               /* 輕微放大感 */
 }
 
         /* 行程時間線連接線 - 改成虛線更可愛 */
