--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
+   <style type="text/tailwindcss">
         /* 自定義顏色 - 可愛活潑版 */
         :root {
             --custom-primary: #FF8BA7; /* Sweet Pink */
