--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 /* 3. 選取狀態：粉紅色填滿 + 粉紅色外框 */
 .active-currency, .active-payer, .active-category, .active-payment, .active-filter {
-    background-color: #FF748D !important; /* 粉紅填滿 */
+    background-color: ##FFFDF9 !important; /* 粉紅填滿 */
     border-color: #FF748D !important;     /* 粉紅外框 */
     color: white !important;              /* 文字轉白 */
     @apply shadow-md;
