--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     
     <script src="https://cdn.tailwindcss.com"></script>
-   <style type="text/tailwindcss">
+   <style>
         /* 自定義顏色 - 可愛活潑版 */
         :root {
             --custom-primary: #FF8BA7; /* Sweet Pink */
@@ -114,7 +114,7 @@
 
 /* 3. 選取狀態：粉紅色填滿 + 粉紅色外框 */
 .active-currency, .active-payer, .active-category, .active-payment, .active-filter {
-    background-color: ##FFFDF9 !important; /* 粉紅填滿 */
+    background-color: #FF8BA7!important; /* 粉紅填滿 */
     border-color: #FF748D !important;     /* 粉紅外框 */
     color: white !important;              /* 文字轉白 */
     @apply shadow-md;
