--- a/index.html
+++ b/index.html
@@ -1695,7 +1695,7 @@ if (dateInput) {
 <div id="edit-expense-payment-select" class="flex gap-2 mb-6">
     <button type="button" class="block-select-btn flex-1" data-payment="Cash" onclick="window.selectPayment('Cash', 'edit-expense')">現金</button>
     <button type="button" class="block-select-btn flex-1" data-payment="Card" onclick="window.selectPayment('Card', 'edit-expense')">信用卡</button>
-<button type="button" class="block-select-btn flex-1" data-payment="Paypay" onclick="window.selectPayment('Paypay', 'expense')">Paypay</button>
+<button type="button" class="block-select-btn flex-1" data-payment="Paypay" onclick="window.selectPayment('Paypay', 'edit-expense')">Paypay</button>
 </div>
                   
 
