--- a/index.html
+++ b/index.html
@@ -1397,6 +1397,7 @@ if (dateInput) {
                         <div id="expense-payment-select" class="flex mb-6">
                             <button type="button" class="block-select-btn flex-1" data-payment="Cash" onclick="window.selectPayment('Cash')"><i class="fa-solid fa-money-bill mr-1"></i> 現金</button>
                             <button type="button" class="block-select-btn flex-1" data-payment="Card" onclick="window.selectPayment('Card')"><i class="fa-regular fa-credit-card mr-1"></i> 信用卡</button>
+<button type="button" class="block-select-btn flex-1" data-payment="Card" onclick="window.selectPayment('Card')"><i class="fa-regular fa-credit-card mr-1"></i> Paypay</button>
                             <input type="hidden" id="expense-payment" value="Cash">
                         </div>
 
