--- a/index.html
+++ b/index.html
@@ -1743,6 +1743,7 @@ if (dateInput) {
     <button type="button" class="block-select-btn flex-1" data-payment="Card" onclick="window.selectPayment('Card', 'edit-expense')">信用卡</button>
     <button type="button" class="block-select-btn flex-1" data-payment="Paypay" onclick="window.selectPayment('Paypay', 'edit-expense')">Paypay</button>
     <input type="hidden" id="edit-expense-payment" value="Cash">
+<input type="hidden" id="edit-expense-category" value="Food">
 </div>
                   
 
