--- a/index.html
+++ b/index.html
@@ -1754,49 +1754,4 @@ if (dateInput) {
                     <div class="flex mb-3">
                         <input type="number" step="0.01" id="edit-expense-amount" class="flex-1 p-3 bg-gray-50 border-0 rounded-xl text-gray-700 font-bold" required>
                         <div id="edit-expense-currency-select" class="flex ml-2 items-center">
-                            <button type="button" class="block-select-btn px-3 py-2 text-sm rounded-xl" data-currency="TWD" onclick="window.selectCurrency('TWD', 'edit-expense')">TWD</button>
-                            <button type="button" class="block-select-btn px-3 py-2 text-sm rounded-xl" data-currency="JPY" onclick="window.selectCurrency('JPY', 'edit-expense')">JPY</button>
-                        </div>
-                        <input type="hidden" id="edit-expense-currency" value="TWD">
-                    </div>
-
-                    <label class="text-sm font-bold text-gray-500 block mb-1 ml-1">說明</label>
-                    <input type="text" id="edit-expense-description" class="w-full p-3 bg-gray-50 border-0 rounded-xl mb-3 text-gray-700" required>
-
-                   <label class="text-sm font-bold text-gray-500 block mb-2 ml-1">付款人</label>
-<div id="edit-expense-payer-select" class="flex gap-2 mb-3">
-    <button type="button" class="block-select-btn flex-1" data-payer="Josh" onclick="window.selectPayer('Josh', 'edit-expense')">Josh</button>
-    <button type="button" class="block-select-btn flex-1" data-payer="Candice" onclick="window.selectPayer('Candice', 'edit-expense')">Candice</button>
-</div>
-
-<label class="text-sm font-bold text-gray-500 block mb-2 ml-1">類別</label>
-<div id="edit-expense-category-select" class="grid grid-cols-3 gap-2 mb-3">
-    <button type="button" class="block-select-btn" data-category="Food" onclick="window.selectCategory('Food', 'edit-expense')">餐飲</button>
-    <button type="button" class="block-select-btn" data-category="Transport" onclick="window.selectCategory('Transport', 'edit-expense')">交通</button>
-    <button type="button" class="block-select-btn" data-category="Accommodation" onclick="window.selectCategory('Accommodation', 'edit-expense')">住宿</button>
-    <button type="button" class="block-select-btn" data-category="Shopping" onclick="window.selectCategory('Shopping', 'edit-expense')">購物</button>
-    <button type="button" class="block-select-btn" data-category="Ticket" onclick="window.selectCategory('Ticket', 'edit-expense')">門票</button>
-    <button type="button" class="block-select-btn" data-category="Other" onclick="window.selectCategory('Other', 'edit-expense')">其他</button>
-</div>
-
-<label class="text-sm font-bold text-gray-500 block mb-2 ml-1">方式</label>
-<div id="edit-expense-payment-select" class="flex gap-2 mb-6">
-    <button type="button" class="block-select-btn flex-1" data-payment="Cash" onclick="window.selectPayment('Cash', 'edit-expense')">現金</button>
-    <button type="button" class="block-select-btn flex-1" data-payment="Card" onclick="window.selectPayment('Card', 'edit-expense')">信用卡</button>
-    <button type="button" class="block-select-btn flex-1" data-payment="Paypay" onclick="window.selectPayment('Paypay', 'edit-expense')">Paypay</button>
-    <input type="hidden" id="edit-expense-payment" value="Cash">
-<input type="hidden" id="edit-expense-category" value="Food">
-</div>
-                  
-
-                    <button type="submit" class="w-full bg-custom-primary text-white p-3 rounded-2xl font-bold shadow-lg shadow-pink-200 hover:bg-custom-primary-dark transition">
-                        <i class="fa-solid fa-check mr-1"></i> 儲存
-                    </button>
-                </form>
-            </div>
-        </div>
-
-    </div>
-
-</body>
-</html>
+                            <button type="button" class="block-select-btn px-3 py-2 text-sm rou
