--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -183,6 +184,13 @@
         }
     </style>
       <script type="module">
+
+
+function editExpense(expenseId) {
+  window.openEditExpenseModal(expenseId);
+}
+window.editExpense = editExpense;
+
         /* =========================
           Firebase 初始化 (使用 ES Modules)
         ========================= */
@@ -1374,7 +1382,7 @@ if (dateInput) {
                     <!-- 長崎 -->
                     <div class="flex-1 min-w-[100px] text-center p-3 border border-pink-200 rounded-2xl bg-pink-50 shadow-sm mb-3 sm:mb-0">
                         <p class="text-sm font-semibold text-gray-700 mb-1">長崎 (27-28日)</p>
-                        <i id="weather-icon-nagasaki" class="fa-solid fa-sun text-3xl text-orange-400 mb-1"></i> 
+                        <i id="weather-icon-nagasaki" class="fa-solid fa-sun text-3xl text-orange-400 mb-1"></i> 
                         <p id="weather-temp-nagasaki" class="text-lg font-bold text-gray-800">5°C / 10°C</p>
                         <p id="weather-rain-nagasaki" class="text-xs text-gray-500 mt-1">降雨率: 0%</p>
                     </div>
