--- a/index.html
+++ b/index.html
@@ -190,6 +190,13 @@ function editExpense(expenseId) {
   window.openEditExpenseModal(expenseId);
 }
 window.editExpense = editExpense;
+window.openModal = function(id) {
+  document.getElementById(id).classList.remove('hidden');
+};
+window.closeModal = function(id) {
+  document.getElementById(id).classList.add('hidden');
+};
+
 
         /* =========================
           Firebase 初始化 (使用 ES Modules)
@@ -1665,22 +1672,34 @@ if (dateInput) {
             </div>
         </div>
         
-        <div id="editExpenseModal" class="fixed inset-0 bg-gray-900/60 backdrop-blur-sm hidden items-center justify-center z-50 p-4" onclick="window.closeModal('editExpenseModal')">
-            <div class="bg-white p-6 rounded-3xl shadow-2xl w-full max-w-sm" onclick="event.stopPropagation()">
-                <h3 class="text-xl font-bold mb-4 flex justify-between items-center text-custom-primary">
-                    <span class="flex items-center"><i class="fa-solid fa-pen-to-square mr-2"></i> 編輯支出</span>
-                    <button onclick="window.closeModal('editExpenseModal')" class="w-8 h-8 rounded-full bg-gray-100 text-gray-400 hover:bg-gray-200 flex items-center justify-center transition">
-                        <i class="fa-solid fa-xmark"></i>
-                    </button>
-                </h3>
-                <form onsubmit="window.saveExpenseUpdate(event)">
-                    <input type="hidden" id="edit-expense-id">
-                    
-                    <label class="text-sm font-bold text-gray-500 block mb-1 ml-1">日期</label>
-                    <input type="date" id="edit-expense-date" class="w-full p-3 bg-gray-50 border-0 rounded-xl mb-3 text-gray-700 font-bold" required>
+        <div id="editExpenseModal" class="fixed inset-0 bg-black bg-opacity-30 hidden items-center justify-center z-50">
+  <div class="bg-white p-6 rounded-2xl shadow-lg w-[90%] max-w-md">
+    <h3 class="text-lg font-bold mb-4 text-gray-700 flex items-center">
+      <i class="fa-solid fa-pen-to-square text-custom-primary mr-2"></i> 編輯支出
+    </h3>
+    <form onsubmit="window.saveExpenseUpdate(event)">
+      <input type="hidden" id="edit-expense-id">
 
-                    <label class="text-sm font-bold text-gray-500 block mb-1 ml-1">金額</label>
-                    <div class="flex mb-3">
-                        <input type="number" step="0.01" id="edit-expense-amount" class="flex-1 p-3 bg-gray-50 border-0 rounded-xl text-gray-700 font-bold" required>
-                        <div id="edit-expense-currency-select" class="flex ml-2 items-center">
-                            <button type="button" class="block-select-btn px-3 py-2 text-sm rou
+      <label class="block mb-2 text-sm font-bold">日期</label>
+      <input type="date" id="edit-expense-date" class="w-full p-3 border rounded-xl mb-4">
+
+      <label class="block mb-2 text-sm font-bold">金額</label>
+      <input type="number" id="edit-expense-amount" class="w-full p-3 border rounded-xl mb-4">
+
+      <label class="block mb-2 text-sm font-bold">支出說明</label>
+      <input type="text" id="edit-expense-description" class="w-full p-3 border rounded-xl mb-4">
+
+      <!-- 其他欄位：幣別、付款人、類別、支付方式 -->
+      <input type="hidden" id="edit-expense-currency">
+      <input type="hidden" id="edit-expense-payer">
+      <input type="hidden" id="edit-expense-category">
+      <input type="hidden" id="edit-expense-payment">
+
+      <div class="flex justify-end gap-2 mt-4">
+        <button type="button" onclick="window.closeModal('editExpenseModal')" class="px-4 py-2 bg-gray-200 rounded">取消</button>
+        <button type="submit" class="px-4 py-2 bg-custom-primary text-white rounded">儲存</button>
+      </div>
+    </form>
+  </div>
+</div>
+
